# Ai-Enterprise

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  Structure.rtf  Structure.txt  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: access_policy.yaml  pii_config.yaml
docs/: architecture.md  pii_modes.md  production_checklist.md
scripts/: run_tests.py  seed_demo_data.py  setup_pgvector.sql
src/guardrails/: audit_logger.py  pii_shield.py  prompt_guard.py
src/servers/: feature_store_server.py  governance_server.py  rag_server.py
src/utils/: config.py  embedding_client.py  openlineage_client.py
tests/: test_feature_store.py  test_guardrail_pipeline.py  test_pii_shield.py  test_prompt_guard.py  test_rag_server.py
